--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -2,7 +2,7 @@
   "name": "admin",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "katalina.dev",
+  "prefix": "katalina-dev",
   "sourceRoot": "apps/admin/src",
   "tags": [],
   "targets": {
@@ -75,10 +75,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
+        "codeCoverage": true,
         "jestConfig": "apps/admin/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
+
         "ci": {
           "ci": true,
           "codeCoverage": true
